# mugi-query

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  action.cpp  action.h  adddatabasedialog.cpp  adddatabasedialog.h  adddatabasedialog.ui  appveyor.yml  automation.cpp  automation.h  build-lld.bat  build-lld.pbat  build-mingw.bat  build-mingw.pbat  build-msvc.bat  build-msvc.pbat  build-msys2.bat  build-msys2.pbat  build-qwt630-mingw11.bat  build-qwt630-mingw11.pbat  build.bat  build.pbat  build.sh  checkablestringlistmodel.cpp  checkablestringlistmodel.h  colorpalette.cpp  colorpalette.h  copyeventfilter.cpp  copyeventfilter.h  databasehistorydialog.cpp  databasehistorydialog.h  databasehistorydialog.ui  dataformat.cpp  dataformat.h  dataplot.cpp  dataplot.h  dataplot.ui  datastreamer.cpp  (+136 more)
cmake/: FindQwt.cmake
lib/emmet/: CMakeLists.txt  emmet.cpp  emmet.h  emmet.json  emmet_global.h
lib/sqlparse/: CMakeLists.txt  sqlparse.cpp  sqlparse.h  sqlparse_global.h  tst_sqlparse.cpp
src/: accessuri.cpp  accessuri.h  action.cpp  action.h  automate.cpp  automate.h  automation.cpp  automation.h  callonce.cpp  callonce.h  canvaspicker.cpp  canvaspicker.h  choicedialog.cpp  choicedialog.h  choicedialog.ui  clicklistener.cpp  clicklistener.h  clipboard.cpp  clipboard.h  codewidgetdialog.cpp  codewidgetdialog.h  codewidgetdialog.ui  colorpalette.cpp  completer.cpp  completer.h  completerdata.cpp  completerdata.h  confirmationdialog.cpp  confirmationdialog.h  confirmationdialog.ui  copyeventfilter.cpp  copyeventfilter.h  copyformat2.cpp  copyformat2.h  copytoclipboard.cpp  (+139 more)
(+381 files in other folders)
